fixing alignment bug in firefox and chrome.

--- a/source/assets/stylesheets/locastyle/modules/_user-account.sass
+++ b/source/assets/stylesheets/locastyle/modules/_user-account.sass
@@ -28,6 +28,7 @@
     .ls-name
       @extend .ls-ellipsis
       max-width: 160px
+      vertical-align: middle
 
     small
       color: #fff
@@ -136,8 +137,5 @@
 
 
 @media screen and (min-width: $screen-sm)
-  .ls-user-account .ls-ico-user
-    line-height: 18px
-  
-    img
-      left: 3px
+  .ls-user-account .ls-ico-user img
+    left: 3px
